--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
@@ -29,20 +30,25 @@
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-ui-lib": "^7.8.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/lodash": "^4.14.199",
     "@types/react": "~18.2.14",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
