--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_URL=http://192.168.216.53:3006
+EXPO_PUBLIC_API_URL=http://192.168.72.53:3006
+# EXPO_PUBLIC_API_URL=http://10.10.20.25:3006
