--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
+    "expo-document-picker": "~11.5.4",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
@@ -31,12 +32,14 @@
     "expo-web-browser": "~12.3.2",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-iconify": "^0.2.10",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -44,7 +47,11 @@
     "react-native-ui-lib": "^7.8.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-av": "~13.4.1",
+    "expo-camera": "~13.4.4",
+    "expo-face-detector": "~12.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
